# swipe

./: CMakeLists.txt  Makefile  build-win.cmd  build.bat  build2.bat  dllmain.c  swipe.c  swipe_test.py
